apache-mesh/apache-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apache-mesh
  annotations:
    istio-injection: enabled
    verrazzano-managed: true
