apache-mesh/apache-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apache-virtualservice
spec:
  hosts:
  - apache.default.158.178.230.133.nip.io
  gateways:
  - apache-gateway
  http:
    - name: "v1"
      route:
      - destination:
          host: apache-servicemesh
